Add Status response

--- a/Meetup.NetStandard.Tests/Meetup.NetStandard.Tests.csproj
+++ b/Meetup.NetStandard.Tests/Meetup.NetStandard.Tests.csproj
@@ -16,4 +16,10 @@
     <ProjectReference Include="..\Meetup.NetStandard\Meetup.NetStandard.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Examples\StatusResponse.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
