Setup error handling

--- a/Meetup.NetStandard.Tests/Meetup.NetStandard.Tests.csproj
+++ b/Meetup.NetStandard.Tests/Meetup.NetStandard.Tests.csproj
@@ -20,6 +20,9 @@
     <None Update="Examples\StatusResponse.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Examples\Throttled.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
