Add status call and response infrastructure (#2)
* Add initial meetup request and options structure

* Add Status response

* Add rate limit information

* Accurately name data test

* Move status response to status

* Move from options to defaults

* Setup error handling

--- a/Meetup.NetStandard.Tests/Meetup.NetStandard.Tests.csproj
+++ b/Meetup.NetStandard.Tests/Meetup.NetStandard.Tests.csproj
@@ -16,4 +16,13 @@
     <ProjectReference Include="..\Meetup.NetStandard\Meetup.NetStandard.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Examples\StatusResponse.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Examples\Throttled.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
