--- a/Meetup.NetStandard.Tests/Meetup.NetStandard.Tests.csproj
+++ b/Meetup.NetStandard.Tests/Meetup.NetStandard.Tests.csproj
@@ -17,6 +17,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Examples\FindLocation.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Examples\StatusResponse.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
