Initial venue structure

--- a/Meetup.NetStandard/Meetup.NetStandard.csproj
+++ b/Meetup.NetStandard/Meetup.NetStandard.csproj
@@ -13,4 +13,10 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="MeetupVenue.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Response\Venues\" />
+  </ItemGroup>
 </Project>
