--- a/Meetup.NetStandard/Meetup.NetStandard.csproj
+++ b/Meetup.NetStandard/Meetup.NetStandard.csproj
@@ -18,5 +18,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Response\Venues\" />
+    <Folder Include="Request\Venues\" />
   </ItemGroup>
 </Project>
