Add venue methods (#4)
* Initial venue structure

* Request/response serialization/deserialization

* Add and refactor pagination to venues

* Add venue ordering

* Recommended venue structure

* Add recommended venues

* Get group venues

* Add venue create

--- a/Meetup.NetStandard/Meetup.NetStandard.csproj
+++ b/Meetup.NetStandard/Meetup.NetStandard.csproj
@@ -13,4 +13,11 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="MeetupVenue.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Response\Venues\" />
+    <Folder Include="Request\Venues\" />
+  </ItemGroup>
 </Project>
