--- a/Meetup.NetStandard.Tests/Meetup.NetStandard.Tests.csproj
+++ b/Meetup.NetStandard.Tests/Meetup.NetStandard.Tests.csproj
@@ -13,6 +13,9 @@
         <ProjectReference Include="..\Meetup.NetStandard\Meetup.NetStandard.csproj" />
     </ItemGroup>
     <ItemGroup>
+        <None Update="Examples\FindVenues.json">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
         <None Update="Examples\StatusResponse.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
